<resources>
    <string name="app_name">MGL</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="background_screen">background_screen</string>
    <string name="login">Login</string>
    <string name="enter_email">Enter Email</string>
    <string name="loginCaps">LOGIN</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="register">Register</string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_agree_to_the_terms_and_conditions">I Agree to the Terms and Conditions</string>
    <string name="have_an_account">Have an Account?</string>

    <string name="err_msg_enter_first_name">Please enter first name</string>
    <string name="err_msg_enter_last_name">Please enter last name</string>
    <string name="err_msg_enter_email">Please enter email</string>
    <string name="err_msg_enter_password">Please enter password</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password do not match</string>
    <string name="err_msg_agree_terms_and_condition">Please agree terms and conditions</string>
    <string name="please_wait">Please Wait</string>
    <string name="email_id">Email ID</string>
    <string name="submit">Submit</string>

    <string name="title_forgot_password">FORGOT PASSWORD?</string>
    <string name="forgot_password_title_description">Enter your username and e-mail address we\'ll send you an email to reset your password</string>

    <string name="email_sent_success">Email sent Successfully</string>
    <string name="register_success">Registered Successfully</string>

    <string name="et_hint_mobile_number">Mobile Number</string>
    <string name="rb_lbl_male">MALE</string>
    <string name="rb_lbl_female">FEMALE</string>
    <string name="rb_lbl_save">SAVE</string>
    <string name="title_complete_profile">COMPLETE YOUR PROFILE</string>
    <string name="content_description">Profile Image</string>
    <string name="hint_first_name">First Name</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="btn_lbl_save">Save</string>
    <string name="read_storage_permission_denied">oops! you have denied permission to read storage, try allowing it from your settings</string>
    <string name="image_selection_failed">Image Selection Failed!</string>
    <string name="err_msg_enter_mobile_number">Please enter your Mobile Number</string>
    <string name="msg_profile_update_success">Your profile has been updated successfully</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="profile_image_settings">profile Image</string>
    <string name="title_settings">Settings</string>
    <string name="user_image">user Image</string>
    <string name="lbl_edit">Edit</string>
    <string name="moses_mwaniki">Moses Mwaniki</string>
    <string name="lbl_addresses">Address</string>
    <string name="btn_lbl_logout">Logout</string>
    <string name="title_edit_profile">EDIT PROFILE</string>
    <string name="phone_number_make_payment">Phone Number i.e 0712345678</string>
    <string name="amount">Enter Amount</string>

</resources>